bug fix and performance improvement

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	],
 	"autoload": {
 		"psr-4": {
-			"Lerm\\Inc\\": "inc/classes",
+			"Lerm\\Inc\\": "inc/",
 			"Lerm\\Inc\\Traits\\": "inc/traits"
 		}
 	}
