--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
             "Inc/Functions/functions-layout.php",
 			"Inc/Functions/functions-opengraph.php",
 			"Inc/Functions/function-login.php",
+			"Inc/Functions/functions-icon.php",
 			"Inc/Functions/helpers.php"
         ]
 	}
